<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Super UPSAM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recorrido_optimo_main">Recorrido Óptimo</string>
    <string name="title_activity_lista_compra">Lista de la Compra</string>
    <string name="title_activity_catalogo_productos">Catálogo de Productos</string>
    <string name="ListaCompra">Lista de la Compra</string>
    <string name="PagarCompra">Pagar Compra Realizada</string>
    <string name="Aparcamiento">Aparcamiento</string>
    <string name="CompraGuiada">Compra Guiada</string>
    <string name="title_activity_informacion_producto">Información del Producto</string>
    <string name="title_activity_anyadir_carrito">Añadir al Carrito de la compra</string>
    <string name="title_activity_geolocalizar_producto">Geolocalizar el Producto</string>
    <string name="CatalogoProductos">Catalogo de Productos</string>
    <string name="TitleCatalogoProductos">Catálogo de Productos</string>
    <string name="TitleInformacionProducto">Información del Producto</string>
    <string name="TitleAnyadirCarrito">Añadir Producto al Carrito</string>
    <string name="TitleGeolocalizarProducto">Geolocalizar Producto</string>
    <string name="LabelNombreProducto">Nombre del Producto</string>
    <string name="LabelNombreCategoria">Categoría</string>
    <string name="LabelDescripcion">Descripción</string>
    <string name="LabelCodigoEAN">"Código EAN "</string>
    <string name="LabelPrecio">Precio</string>
    <string name="TitleListaCompra">Lista de la Compra</string>
    <string name="LabelCantidad">Cantidad</string>
    <string name="title_activity_buscar_producto">Búsqueda de Productos</string>
    <string name="LabelBuscarProducto">Búsqueda de Productos</string>
    <string name="title_activity_carrito_compra">Carrito de la Compra</string>
    <string name="title_activity_leer_codigo_barras">Lectura del Código de Barras</string>
    <string name="TitleCarritoCompra">Carrito de la Compra</string>
    <string name="TitleLeerCodigoBarras">Lectura del Código de Barras</string>
    <string name="TitlePurchasePay">Pago de compra realizada</string>
    <string name="NFCDisable">NFC no está disponible en su terminal</string>
    <string name="NotMoney">La cantidad total a pagar de la compra es cero</string>
    <string name="title_activity_purchase_pay">Pagar compra</string>
    <string name="title_activity_pago__main">Pago_MainActivity</string>
    <string name="sImportTotal">El importe total de la compra es:</string>
    <string name="sConfirmPurchase">Confirmar Compra</string>
    <string name="sRevisarProductos">Revisar Productos</string>
    <string name="sConfirm">Confirmar</string>
    <string name="title_activity_modo_pago">ModoPagoActivity</string>
    <string name="title_activity_pago_nfc">PagoNFCActivity</string>
    <string name="title_activity_pago_paybox">PagoPayboxActivity</string>
    <string name="title_activity_finalizar_pago">FinalizarPagoActivity</string>
    <string name="NFC">NFC</string>
    <string name="PayBox">PAYBOX</string>
    <string name="SelectModePurchase">Selección Modo Pago</string>
    <string name="PagoNFC">Pago por NFC</string>
    <string name="PagoPaybox">Pago por Paybox</string>
    <string name="DescriptionPagoNFC">Por favor, acerque su terminal al receptor</string>
    <string name="EnterPassword">Introduzca la clave</string>
    <string name="PayComplete">Pago Completado</string>
    <string name="PayCorrect">La transferencia se realizó correctamente</string>
    <string name="Return">Volver</string>

    <color name="blue">#5d9dcf</color>
    <color name="blue2">#90b9d9</color>
    <color name="green">#33850f</color>
    <color name="green2">#50d065</color>
    <color name="grey">#828e89</color>
    <color name="grey2">#cccfce</color>
    <color name="transparent">#00000000</color>
    <color name="blue_transparent">#8090b9d9</color>
    <color name="grey_transparent">#80828e89</color>
    

    <string name="title_activity_activity_pago_qr">activity_pago_qr</string>

</resources>
