<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InformacionProductoActivity" >

    <!--   CABECERA DE LA PÁGINA-->

   	<LinearLayout
   	    android:layout_width="fill_parent"
   	    android:layout_height="fill_parent"
   	    android:layout_alignParentBottom="true"
   	    android:layout_alignParentLeft="true"
   	    android:layout_alignParentRight="true"
   	    android:layout_alignParentTop="true"
   	    android:orientation="vertical" >

   	    <LinearLayout
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content"
   	        android:layout_gravity="top|left|right"
   	        android:layout_marginBottom="2dp"
   	        android:layout_marginLeft="0dp"
   	        android:layout_marginRight="0dp"
   	        android:layout_marginTop="0dp"
   	        android:background="@color/blue"
   	        android:gravity="top|fill|clip_horizontal" >

   	        <TextView
   	            android:layout_width="178dp"
   	            android:layout_height="wrap_content"
   	            android:gravity="center"
   	            android:text="@string/TitleInformacionProducto"
   	            android:textSize="18dp"
   	            android:textStyle="bold" />

   	        <ImageView
   	            android:layout_width="32dp"
   	            android:layout_height="32dp"
   	            android:layout_gravity="right|center_vertical"
   	            android:layout_marginLeft="20dp"
   	            android:src="@android:drawable/ic_menu_search" />

   	        <ImageView
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:src="@drawable/ic_carrito_compra" />
   	    </LinearLayout>
   	    
   	    <!--   SUB-CABECERA DE LA PÁGINA-->

   	    <LinearLayout
   	        android:layout_width="match_parent"
   	        android:layout_height="34dp"
   	        android:layout_gravity="top|left|right"
   	        android:layout_marginBottom="10dp"
   	        android:layout_marginLeft="0dp"
   	        android:layout_marginRight="0dp"
   	        android:layout_marginTop="0dp"
   	        android:background="@color/blue2"
   	        android:gravity="top|fill|clip_horizontal" >

   	        <TextView
   	            android:layout_width="178dp"
   	            android:layout_height="wrap_content"
   	            android:layout_gravity="center"
   	            android:gravity="center"
   	            android:text="Coca -Cola 33cl"
   	            android:textSize="18dp"
   	            android:textStyle="bold" />

   	        <ImageView
   	            android:layout_width="32dp"
   	            android:layout_height="32dp"
   	            android:layout_gravity="right|center_vertical"
   	            android:layout_marginLeft="20dp"
   	            android:src="@android:drawable/ic_menu_view" />

   	        <ImageView
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:src="@drawable/ic_add_carrito" />
   	    </LinearLayout>

   	    <LinearLayout
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content"
   	        android:layout_marginTop="30dp" >

   	        <ImageView
   	            android:id="@+id/imageViewProducto"
   	            android:layout_width="174dp"
   	            android:layout_height="202dp"
   	            android:adjustViewBounds="true"
   	            android:scaleType="fitCenter"
   	            android:src="@drawable/coca_cola_lata" />

   	        <LinearLayout
   	            android:layout_width="match_parent"
   	            android:layout_height="match_parent"
   	            android:orientation="vertical" >

   	            <TextView
   	                android:id="@+id/textLabelNombreCategoria"
   	                android:layout_width="fill_parent"
   	                android:layout_height="20dp"
   	                android:text="@string/LabelNombreCategoria"
   	                android:textStyle="bold" />

   	            <TextView
   	                android:id="@+id/textViewCategoriaProducto"
   	                android:layout_width="fill_parent"
   	                android:layout_height="30dp"
   	                android:layout_below="@+id/textLabelNombreCategoria"
   	                android:layout_weight="0.00"
   	                android:text="Bebidas" />

   	            <TextView
   	                android:id="@+id/textLabelNombreProducto"
   	                android:layout_width="fill_parent"
   	                android:layout_height="39dp"
   	                android:layout_below="@+id/textViewCategoriaProducto"
   	                android:text="@string/LabelNombreProducto"
   	                android:textStyle="bold" />

   	            <TextView
   	                android:id="@+id/textViewNomBreProducto"
   	                android:layout_width="fill_parent"
   	                android:layout_height="20dp"
   	                android:text="Coca-Cola (lata) 33cl" />

   	            <TextView
   	                android:id="@+id/textLabelDescripcion"
   	                android:layout_width="fill_parent"
   	                android:layout_height="wrap_content"
   	                android:layout_marginTop="10dp"
   	                android:text="@string/LabelDescripcion"
   	                android:textStyle="bold" />

   	            <TextView
   	                android:id="@+id/textView2"
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:layout_marginTop="4dp"
   	                android:text="Lata de Coca-Cola Clásica de 33cl" />

   	        </LinearLayout>

   	    </LinearLayout>

   	    <LinearLayout
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content" >

   	        <TextView
   	            android:id="@+id/textViewCodigoEAN"
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:layout_marginRight="20dp"
   	            android:text="@string/LabelCodigoEAN"
   	            android:textStyle="bold" />

   	        <TextView
   	            android:id="@+id/textViewTotalPagar"
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:text="5 449000 000996" />
   	    </LinearLayout>

   	    <LinearLayout
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content" >

   	        <TextView
   	            android:id="@+id/textLabelPrecio"
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:text="@string/LabelPrecio"
   	            android:textStyle="bold" />

   	        <TextView
   	            android:id="@+id/textViewPrecio"
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:layout_gravity="right"
   	            android:layout_marginLeft="60dp"
   	            android:text="0,56 €" />

   	    </LinearLayout>

   	</LinearLayout>

</RelativeLayout>