<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AnyadirCarritoActivity" >

   	<LinearLayout
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentBottom="true"
   	    android:layout_alignParentLeft="true"
   	    android:layout_alignParentRight="true"
   	    android:layout_alignParentTop="true"
   	    android:orientation="vertical" >

   	    <LinearLayout
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:layout_gravity="top|left|right"
   	        android:layout_marginBottom="2dp"
   	        android:layout_marginLeft="0dp"
   	        android:layout_marginRight="0dp"
   	        android:layout_marginTop="0dp"
   	        android:background="@color/blue"
   	        android:gravity="top|fill|clip_horizontal" >

   	        <TextView
   	            android:layout_width="178dp"
   	            android:layout_height="wrap_content"
   	            android:gravity="center"
   	            android:text="@string/TitleAnyadirCarrito"
   	            android:textSize="18dp"
   	            android:textStyle="bold" />

   	        <ImageView
   	            android:layout_width="32dp"
   	            android:layout_height="32dp"
   	            android:layout_gravity="right|center_vertical"
   	            android:layout_marginLeft="20dp"
   	            android:src="@android:drawable/ic_menu_search" />

   	        <ImageView
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:onClick="onClickCarritoCompra"
   	            android:src="@drawable/ic_carrito_compra" />

   	    </LinearLayout>

   	    <!--   SUB-CABECERA DE LA PÁGINA-->

   	    <LinearLayout
   	        android:layout_width="fill_parent"
   	        android:layout_height="34dp"
   	        android:layout_gravity="top|left|right"
   	        android:layout_marginBottom="0dp"
   	        android:layout_marginLeft="0dp"
   	        android:layout_marginRight="0dp"
   	        android:layout_marginTop="0dp"
   	        android:background="@color/blue2"
   	        android:gravity="top|fill|clip_horizontal" >

   	        <TextView
   	            android:id="@+id/txttitulo"
   	            android:layout_width="178dp"
   	            android:layout_height="wrap_content"
   	            android:layout_gravity="center"
   	            android:gravity="center"
   	            android:textSize="18dp"
   	            android:textStyle="bold" />

   	        <ImageView
   	            android:layout_width="32dp"
   	            android:layout_height="32dp"
   	            android:layout_gravity="right|center_vertical"
   	            android:layout_marginLeft="30dp"
   	            android:onClick="onClickGeolocalizarProducto"
   	            android:src="@android:drawable/ic_menu_view" />

   	        <ImageView
   	            android:layout_width="32dp"
   	            android:layout_height="32dp"
   	            android:layout_marginLeft="0dp"
   	            android:onClick="onClickDetallarProducto"
   	            android:src="@android:drawable/ic_menu_info_details" />

   	    </LinearLayout>
   	    
   	    <LinearLayout
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:orientation="vertical" >

   	        <TextView
   	            android:id="@+id/textLabelNombreCategoria"
   	            android:layout_width="fill_parent"
   	            android:layout_height="20dp"
   	            android:layout_marginTop="20dp"
   	            android:text="@string/LabelNombreCategoria"
   	            android:textStyle="bold" />

   	        <TextView
   	            android:id="@+id/textViewCategoriaProducto"
   	            android:layout_width="fill_parent"
   	            android:layout_height="30dp"
   	            android:layout_below="@+id/textLabelNombreCategoria"
   	            android:layout_weight="0.00" />

   	        <TextView
   	            android:id="@+id/textLabelNombreProducto"
   	            android:layout_width="fill_parent"
   	            android:layout_height="24dp"
   	            android:layout_below="@+id/textViewCategoriaProducto"
   	            android:text="@string/LabelNombreProducto"
   	            android:textStyle="bold" />

   	        <TextView
   	            android:id="@+id/textViewNombreProducto"
   	            android:layout_width="fill_parent"
   	            android:layout_height="20dp" />

   	        <TextView
   	            android:id="@+id/textViewTotalPagar"
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:layout_marginTop="10dp"
   	            android:text="@string/LabelCantidad"
   	            android:textStyle="bold" />

   	        <LinearLayout
   	            android:layout_width="match_parent"
   	            android:layout_height="wrap_content" >

   	            <EditText
   	                android:id="@+id/editTextTotalPagar"
   	                android:layout_width="wrap_content"
   	                android:layout_height="wrap_content"
   	                android:layout_marginTop="10dp"
   	                android:layout_weight="1"
   	                android:ems="10"
   	                android:inputType="number" >

   	                <requestFocus />
   	            </EditText>
   	        </LinearLayout>

   	        <ImageButton
   	            android:id="@+id/imageButton1"
   	            android:layout_width="197dp"
   	            android:layout_height="wrap_content"
   	            android:layout_gravity="center"
   	            android:layout_marginTop="10dp"
   	            android:adjustViewBounds="true"
   	            android:onClick="onClickAddProducto"
   	            android:scaleType="centerCrop"
   	            android:src="@drawable/icono_carrito_compras" />

   	    </LinearLayout>

   	</LinearLayout>

</RelativeLayout>